# autexousious

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  DEPLOYING.md  Makefile.toml  README.md  assets  build.rs  index.html  resources  rustfmt.toml  tarpaulin.toml  worker.js
app/free_will/: Cargo.toml  build.rs
app/free_will/resources/: display_config.ron
app/free_will/src/: main.rs
app/free_will/tests/: 001_start_and_exit.rs
app/session_server/: Cargo.toml  logger.yaml  session_server.service
app/session_server/src/: main.rs  model.rs  play.rs  system.rs
app/session_server/src/model/: game_input_tick_status.rs  session_code_id.rs  session_code_to_id.rs  session_device_mappings.rs  session_device_tick_statuses.rs  session_id_to_device_mappings.rs  session_tick_statuses.rs  socket_to_device_id.rs
app/session_server/src/play/: session_tracker.rs
app/session_server/src/system/: network_input_responder_system.rs  session_cleaner.rs  session_device_disconnect_responder_system.rs  session_host_responder_system.rs  session_join_responder_system.rs  session_lobby_responder_system.rs  session_message_responder_system.rs
app/will/: Cargo.toml  EULA.md  logger.yaml  will.toml  will_web.yaml
app/will/assets/: collision_audio.toml  collision_audio.yaml  ui_audio.toml
app/will/resources/: display_config.ron  font_config.ron  input.ron  input_config.ron
app/will/src/: built_in.rs  main.rs  render_graph.rs
app/will/tests/: 001_start_and_exit.rs
crate/amethyst_test_support/: Cargo.toml
crate/amethyst_test_support/src/: amethyst_application.rs  lib.rs  prelude.rs  system_injection_bundle.rs
crate/amethyst_test_support/src/fixture/: material_animation_fixture.rs  mod.rs  sprite_render_animation_fixture.rs
crate/amethyst_test_support/src/state/: assertion_state.rs  custom_dispatcher_state.rs  effect_state.rs  empty_state.rs  function_state.rs  mod.rs  scheduler_state.rs  sequencer_state.rs
crate/animation_support/: Cargo.toml
crate/animation_support/src/: active_handle.rs  active_handle_channel.rs  active_handle_primitive.rs  animation_data_set.rs  animation_runner.rs  lib.rs  multi_animation_runner.rs
crate/application/: Cargo.toml
crate/application/examples/: config.ron
crate/application/resources/: config.ron
crate/application/src/: app_dir.rs  app_file.rs  dir.rs  discovery_context.rs  error.rs  find.rs  find_context.rs  format.rs  io_support.rs  io_utils.rs  lib.rs  load.rs  resource.rs
crate/application/src/config/: error.rs  find.rs  find_context.rs  mod.rs
crate/application/src/resource/: dir.rs  error.rs  find.rs  find_context.rs  format.rs  io_support.rs  io_utils.rs  load.rs  mod.rs  test_support.rs
crate/application_event/: Cargo.toml
crate/application_event/src/: app_event.rs  from_app_event.rs  lib.rs
crate/application_menu/: Cargo.toml
crate/application_menu/examples/01_menu/: main.rs  main_menu.rs  other.rs  render_graph.rs
crate/application_menu/src/: component.rs  event.rs  lib.rs  menu_index.rs  menu_item.rs  system.rs
crate/application_menu/src/component/: menu_item.rs  menu_item_widget_state.rs  siblings.rs
crate/application_menu/src/system/: menu_item_widget_input_system.rs
crate/application_menu/tests/: examples.rs
crate/application_robot/: Cargo.toml
crate/application_robot/src/: intercept.rs  lib.rs  state.rs
crate/application_state/: Cargo.toml
crate/application_state/src/: app_state.rs  autex_state.rs  hook_fn.rs  hookable_fn.rs  lib.rs  state_proxy.rs
crate/application_test_support/: Cargo.toml
crate/application_test_support/src/: autexousious_application.rs  lib.rs  prelude.rs  queries.rs  setup_function.rs
crate/application_ui/: Cargo.toml
crate/application_ui/resources/: bad_config.ron  display_config.ron
crate/application_ui/src/: application_ui_bundle.rs  bundle.rs  font_config.rs  font_config_loader.rs  font_variant.rs  lib.rs  theme.rs  theme_loader.rs
crate/application_ui/tests/: examples.rs
crate/asset_derive/: Cargo.toml
crate/asset_derive/src/: lib.rs
crate/asset_gfx_gen/: Cargo.toml
crate/asset_gfx_gen/src/: colour_sprite_sheet_gen.rs  colour_sprite_sheet_gen_data.rs  colour_sprite_sheet_params.rs  lib.rs  sprite_gen_params.rs  sprite_sheet_gen.rs
crate/asset_loading/: Cargo.toml
crate/asset_loading/src/: asset_discovery.rs  asset_indexer.rs  asset_indexing_utils.rs  dir_traverse.rs  flat_indexer.rs  lib.rs  map_indexer.rs  namespace_directory.rs  namespace_discoverer.rs  object_indexer.rs  toml_format.rs  yaml_format.rs
crate/asset_model/: Cargo.toml
crate/asset_model/src/: config.rs  item_component.rs  lib.rs  loaded.rs  play.rs
crate/asset_play/: Cargo.toml
crate/asset_play/src/: asset_play_bundle.rs  lib.rs  system.rs
crate/asset_selection_model/: Cargo.toml
crate/asset_selection_model/src/: config.rs  lib.rs  play.rs
crate/asset_selection_stdio/: Cargo.toml
crate/asset_selection_stdio/src/: asset_selection_event_stdin_mapper.rs  asset_selection_stdio_bundle.rs  lib.rs
crate/asset_selection_ui_model/: Cargo.toml
crate/asset_selection_ui_model/src/: lib.rs  loaded.rs  play.rs
crate/asset_selection_ui_play/: Cargo.toml
crate/asset_selection_ui_play/src/: lib.rs  system.rs
crate/asset_ui_model/: Cargo.toml
crate/asset_ui_model/src/: config.rs  lib.rs  loaded.rs  play.rs
crate/asset_ui_play/: Cargo.toml
crate/asset_ui_play/src/: lib.rs  system.rs
crate/assets_built_in/: Cargo.toml
crate/assets_built_in/src/: common.rs  lib.rs  map.rs
crate/assets_test/: Cargo.toml
crate/assets_test/assets/: collision_audio.toml  collision_audio.yaml  font  ui_audio.toml  ui_audio.yaml
crate/assets_test/src/: common.rs  lib.rs  map.rs  object.rs  ui.rs
crate/audio_loading/: Cargo.toml
crate/audio_loading/src/: audio_loader.rs  audio_loading_bundle.rs  lib.rs
crate/audio_model/: Cargo.toml
crate/audio_model/src/: config.rs  lib.rs  loaded.rs
crate/audio_play/: Cargo.toml
crate/audio_play/src/: lib.rs  system.rs
crate/background_loading/: Cargo.toml
crate/background_loading/src/: background_loading_bundle.rs  lib.rs
(+2350 files in other folders)
