[workspace]
members = ["app/*", "crate/*"]

[profile.release]
# Slower compilation, but better performance of final executable.
# <https://blog.rust-lang.org/2018/02/15/Rust-1.24.html#incremental-compilation>
codegen-units = 1

[patch.crates-io]
# https://github.com/trimental/andrew/pull/2
andrew = { git = "https://github.com/azriel91/andrew.git", branch = "maintenance/update-dependencies" }

# https://github.com/sgrif/derive_deref/pull/6
derive_deref = { git = "https://github.com/azriel91/derive_deref.git", branch = "maintenance/update-syn-quote-proc-macro2" }

# https://github.com/iamcodemaker/console_log/pull/6
console_log = { path = "/mnt/data/work/github/iamcodemaker/console_log" }

[patch."https://github.com/amethyst/amethyst.git"]
amethyst = { path = "/mnt/data/work/github/amethyst/amethyst" }
amethyst_test = { path = "/mnt/data/work/github/amethyst/amethyst/amethyst_test" }
