[package]
name = "free_will"
description = "In this game, you make your choices; then your choices make you."
version = "0.1.0"
authors = ["Azriel Hoh <mail@azriel.im>"]

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "develop" }
application = { path = "../../crate/application" }
application_input = { path = "../../crate/application_input" }
game_mode_menu = { path = "../../crate/game_mode_menu" }
stdio_view = { path = "../../crate/stdio_view" }
structopt = "0.1.6"
structopt-derive = "0.1.6"

[dev-dependencies]
assert_cli = "0.5"

[build-dependencies]
application = { path = "../../crate/application" }
