[package]
name = "will"
description = "In this game, you make your choices; then your choices make you."
version = "0.18.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "wasm", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "gl", "test-support"] }
application = { path = "../../crate/application" }
application_event = { path = "../../crate/application_event" }
application_input = { path = "../../crate/application_input" }
application_robot = { path = "../../crate/application_robot" }
application_state = { path = "../../crate/application_state" }
application_ui = { path = "../../crate/application_ui" }
asset_model = { path = "../../crate/asset_model" }
asset_play = { path = "../../crate/asset_play" }
asset_selection_stdio = { path = "../../crate/asset_selection_stdio" }
asset_selection_ui_play = { path = "../../crate/asset_selection_ui_play" }
asset_ui_play = { path = "../../crate/asset_ui_play" }
audio_loading = { path = "../../crate/audio_loading" }
background_loading = { path = "../../crate/background_loading" }
camera_play = { path = "../../crate/camera_play" }
character_loading = { path = "../../crate/character_loading" }
character_prefab = { path = "../../crate/character_prefab" }
collision_audio_loading = { path = "../../crate/collision_audio_loading" }
collision_loading = { path = "../../crate/collision_loading" }
energy_loading = { path = "../../crate/energy_loading" }
energy_prefab = { path = "../../crate/energy_prefab" }
frame_rate = { path = "../../crate/frame_rate" }
game_input = { path = "../../crate/game_input" }
game_input_model = { path = "../../crate/game_input_model" }
game_input_stdio = { path = "../../crate/game_input_stdio" }
game_mode_selection = { path = "../../crate/game_mode_selection" }
game_mode_selection_stdio = { path = "../../crate/game_mode_selection_stdio" }
game_mode_selection_ui = { path = "../../crate/game_mode_selection_ui" }
game_play = { path = "../../crate/game_play" }
game_play_stdio = { path = "../../crate/game_play_stdio" }
input_reaction_loading = { path = "../../crate/input_reaction_loading" }
kinematic_loading = { path = "../../crate/kinematic_loading" }
loading = { path = "../../crate/loading" }
log = "0.4.8"
map_loading = { path = "../../crate/map_loading" }
net_play = { path = "../../crate/net_play" }
network_input_play = { path = "../../crate/network_input_play" }
network_mode_selection_stdio = { path = "../../crate/network_mode_selection_stdio" }
network_session_model = { path = "../../crate/network_session_model" }
network_session_play = { path = "../../crate/network_session_play" }
parent_play = { path = "../../crate/parent_play" }
sequence_loading = { path = "../../crate/sequence_loading" }
serde = { version = "1.0.105", features = ["derive"] }
serde_yaml = "0.8.11"
session_host_play = { path = "../../crate/session_host_play" }
session_host_stdio = { path = "../../crate/session_host_stdio" }
session_join_play = { path = "../../crate/session_join_play" }
session_join_stdio = { path = "../../crate/session_join_stdio" }
session_lobby_play = { path = "../../crate/session_lobby_play" }
session_lobby_ui_play = { path = "../../crate/session_lobby_ui_play" }
spawn_loading = { path = "../../crate/spawn_loading" }
sprite_loading = { path = "../../crate/sprite_loading" }
state_play = { path = "../../crate/state_play" }
state_registry = { path = "../../crate/state_registry" }
stdio_command_stdio = { path = "../../crate/stdio_command_stdio" }
stdio_input = { path = "../../crate/stdio_input" }
stdio_spi = { path = "../../crate/stdio_spi" }
structopt = "0.3.12"
structopt-derive = "0.4.5"
structopt-toml = "0.4.2"
tracker = { path = "../../crate/tracker" }
ui_audio_loading = { path = "../../crate/ui_audio_loading" }
ui_loading = { path = "../../crate/ui_loading" }
ui_play = { path = "../../crate/ui_play" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.6" }
wasm-bindgen = { version = "0.2.60" }
wasm-logger = { version = "0.2.0" }
web-sys = { version = "0.3.36" }

[dev-dependencies]
assert_cmd = "1.0.1"
escargot = "0.5.0"

[features]
default = ["parallel"]
parallel = ["amethyst/parallel"]
wasm = ["amethyst/wasm"]
