[package]
name = "amethyst_test_support"
version = "0.4.0"
authors = ["Azriel Hoh <mail@azriel.im>"]

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "develop" }
boxfnonce = "0.1"
derivative = "1.0"
derive-new = "0.5"
hetseq = "0.1"
lazy_static = "1.0"

[features]
nightly = ["amethyst/nightly"]
