[package]
name = "animation_support"
version = "0.7.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git" }
derive-new = "0.5"
fnv = "1.0"
minterpolate = { version = "0.4", features = ["serde"] }
named_type = "0.1.6"
named_type_derive = "0.1.6"
serde = "1.0"
