[package]
name = "animation_support"
version = "0.13.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "vulkan"] }
derive-new = "0.5.6"
fnv = "1.0.6"
minterpolate = { version = "0.4.0", features = ["serde"] }
named_type = "0.2.1"
named_type_derive = "0.2.1"
serde = "1.0.94"

[features]
nightly = ["amethyst/nightly"]
