[package]
name = "application"
version = "0.18.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = true
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "vulkan", "test-support"] }
derivative = "2.1.0"
derive-new = "0.5.8"
log = "0.4.8"
ron = "0.5.1"
serde = { version = "1.0.105", features = ["derive"] }
serde_yaml = "0.8.11"

[dev-dependencies]
pretty_assertions = "0.6.1"
lazy_static = "1.4.0"
tempfile = "3.1.0"
