[package]
name = "application"
version = "0.19.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = true
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "wasm", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "test-support", "wav", "web_socket"] }
derivative = "2.2.0"
derive-new = "0.5.9"
log = "0.4.14"
ron = "0.6.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"

[dev-dependencies]
pretty_assertions = "0.7.2"
lazy_static = "1.4.0"
tempfile = "3.2.0"
