[package]
name = "application_event"
version = "0.15.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "vulkan"] }
character_selection_model = { path = "../character_selection_model" }
derive_more = "0.15.1-pre"
derivative = "1.0.3"
game_input_model = { path = "../game_input_model" }
game_mode_selection_model = { path = "../game_mode_selection_model" }
game_play_model = { path = "../game_play_model" }
map_selection_model = { path = "../map_selection_model" }
stdio_command_model = { path = "../stdio_command_model" }
strum = "0.16.0"
strum_macros = "0.16.0"
winit = "0.19.3"

[features]
nightly = ["amethyst/nightly"]
