[package]
name = "application_event"
version = "0.17.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "vulkan"] }
asset_selection_model = { path = "../asset_selection_model" }
control_settings_model = { path = "../control_settings_model" }
derive_more = "0.99.2"
game_input_model = { path = "../game_input_model" }
game_mode_selection_model = { path = "../game_mode_selection_model" }
game_play_model = { path = "../game_play_model" }
network_mode_selection_model = { path = "../network_mode_selection_model" }
stdio_command_model = { path = "../stdio_command_model" }
strum = "0.17.1"
strum_macros = "0.17.1"

[features]
nightly = ["amethyst/nightly"]
