[package]
name = "application_event"
version = "0.17.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "maintenance/correct-amethyst-test-features", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "vulkan", "test-support"] }
asset_selection_model = { path = "../asset_selection_model" }
control_settings_model = { path = "../control_settings_model" }
derive_more = "0.99.2"
game_input_model = { path = "../game_input_model" }
game_mode_selection_model = { path = "../game_mode_selection_model" }
game_play_model = { path = "../game_play_model" }
network_mode_selection_model = { path = "../network_mode_selection_model" }
session_host_model = { path = "../session_host_model" }
session_join_model = { path = "../session_join_model" }
session_lobby_model = { path = "../session_lobby_model" }
stdio_command_model = { path = "../stdio_command_model" }
strum = "0.17.1"
strum_macros = "0.17.1"
