[package]
name = "application_menu"
version = "0.1.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
game_mode_selection_model = { path = "../game_mode_selection_model" }
network_mode_selection_model = { path = "../network_mode_selection_model" }
serde = { version = "1.0.104", features = ["derive"] }
