[package]
name = "application_robot"
version = "0.14.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "vulkan"] }
application_input = { path = "../application_input" }
derivative = "1.0.3"

[features]
nightly = ["amethyst/nightly"]
