[package]
name = "application_robot"
version = "0.18.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "wasm", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "gl", "test-support"] }
application_input = { path = "../application_input" }
derivative = "2.1.0"
