[package]
name = "application_state"
version = "0.18.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "maintenance/correct-amethyst-test-features", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "vulkan", "test-support"] }
application_event = { path = "../application_event" }
derivative = "1.0.3"
derive_deref = "1.1.0"
derive-new = "0.5.8"
log = "0.4.8"
state_support = { path = "../state_support" }
