[package]
name = "application_test_support"
version = "0.10.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git" }
amethyst_test = { git = "https://github.com/amethyst/amethyst.git" }
application_event = { path = "../application_event" }
asset_loading = { path = "../asset_loading" }
asset_model = { path = "../asset_model" }
assets_test = { path = "../assets_test" }
character_loading = { path = "../character_loading" }
character_model = { path = "../character_model" }
character_selection = { path = "../character_selection" }
character_selection_model = { path = "../character_selection_model" }
collision_loading = { path = "../collision_loading" }
collision_model = { path = "../collision_model" }
game_input_model = { path = "../game_input_model" }
game_loading = { path = "../game_loading" }
game_model = { path = "../game_model" }
loading = { path = "../loading" }
map_loading = { path = "../map_loading" }
map_model = { path = "../map_model" }
map_selection = { path = "../map_selection" }
map_selection_model = { path = "../map_selection_model" }
object_loading = { path = "../object_loading" }
object_model = { path = "../object_model" }
sequence_loading = { path = "../sequence_loading" }
sequence_model = { path = "../sequence_model" }
sprite_loading = { path = "../sprite_loading" }

[dev-dependencies]
strum = "0.14.0"

[features]
nightly = ["amethyst/nightly"]
