[package]
name = "application_test_support"
version = "0.14.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "test-support", "vulkan"] }
amethyst_test = { git = "https://github.com/amethyst/amethyst.git" }
application_event = { path = "../application_event" }
asset_loading = { path = "../asset_loading" }
asset_model = { path = "../asset_model" }
assets_test = { path = "../assets_test" }
audio_loading = { path = "../audio_loading" }
character_loading = { path = "../character_loading" }
character_model = { path = "../character_model" }
character_prefab = { path = "../character_prefab" }
character_selection = { path = "../character_selection" }
character_selection_model = { path = "../character_selection_model" }
collision_audio_loading = { path = "../collision_audio_loading" }
collision_loading = { path = "../collision_loading" }
collision_model = { path = "../collision_model" }
energy_loading = { path = "../energy_loading" }
energy_prefab = { path = "../energy_prefab" }
game_input_model = { path = "../game_input_model" }
game_loading = { path = "../game_loading" }
game_model = { path = "../game_model" }
kinematic_loading = { path = "../kinematic_loading" }
loading = { path = "../loading" }
map_loading = { path = "../map_loading" }
map_model = { path = "../map_model" }
map_selection = { path = "../map_selection" }
map_selection_model = { path = "../map_selection_model" }
object_model = { path = "../object_model" }
object_prefab = { path = "../object_prefab" }
object_type = { path = "../object_type", features = ["test-support"] }
sequence_loading = { path = "../sequence_loading" }
sequence_model = { path = "../sequence_model" }
spawn_loading = { path = "../spawn_loading" }
spawn_model = { path = "../spawn_model" }
sprite_loading = { path = "../sprite_loading" }
sprite_model = { path = "../sprite_model" }
ui_audio_loading = { path = "../../crate/ui_audio_loading" }

[features]
nightly = ["amethyst/nightly"]
