[package]
name = "application_test_support"
version = "0.16.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "test-support", "vulkan"] }
amethyst_test = { git = "https://github.com/amethyst/amethyst.git" }
application_event = { path = "../application_event" }
asset_loading = { path = "../asset_loading" }
asset_model = { path = "../asset_model" }
asset_play = { path = "../asset_play" }
assets_test = { path = "../assets_test" }
audio_loading = { path = "../audio_loading" }
background_loading = { path = "../background_loading" }
character_loading = { path = "../character_loading" }
character_model = { path = "../character_model" }
character_prefab = { path = "../character_prefab" }
character_selection = { path = "../character_selection" }
character_selection_model = { path = "../character_selection_model" }
collision_audio_loading = { path = "../collision_audio_loading" }
collision_loading = { path = "../collision_loading" }
collision_model = { path = "../collision_model" }
energy_loading = { path = "../energy_loading" }
game_input_model = { path = "../game_input_model" }
game_loading = { path = "../game_loading" }
game_model = { path = "../game_model" }
input_reaction_loading = { path = "../input_reaction_loading" }
kinematic_loading = { path = "../kinematic_loading" }
loading = { path = "../loading" }
map_loading = { path = "../map_loading" }
map_model = { path = "../map_model" }
map_selection = { path = "../map_selection" }
map_selection_model = { path = "../map_selection_model" }
object_model = { path = "../object_model" }
object_type = { path = "../object_type" }
sequence_loading = { path = "../sequence_loading" }
sequence_model = { path = "../sequence_model" }
spawn_loading = { path = "../spawn_loading" }
spawn_model = { path = "../spawn_model" }
sprite_loading = { path = "../sprite_loading" }
sprite_model = { path = "../sprite_model" }
state_play = { path = "../state_play" }
state_registry = { path = "../state_registry" }
tracker = { path = "../tracker" }
ui_audio_loading = { path = "../ui_audio_loading" }
ui_loading = { path = "../ui_loading" }

[features]
nightly = ["amethyst/nightly"]
