[package]
name = "application_ui"
version = "0.16.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = true
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "vulkan"] }
application = { path = "../application" }
derive-new = "0.5.8"
serde = { version = "1.0.104", features = ["derive"] }
strum = "0.17.1"
strum_macros = "0.17.1"

[features]
nightly = ["amethyst/nightly"]
