[package]
name = "application_ui"
version = "0.18.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = true
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "wasm", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "test-support"] }
application = { path = "../application" }
derive-new = "0.5.8"
serde = { version = "1.0.105", features = ["derive"] }
strum = "0.18.0"
strum_macros = "0.18.0"
