[package]
name = "application_ui"
version = "0.19.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "wasm", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "test-support", "wav", "web_socket"] }
application = { path = "../application" }
derive-new = "0.5.8"
serde = { version = "1.0.106", features = ["derive"] }
strum = "0.18.0"
strum_macros = "0.18.0"
