[package]
name = "asset_derive"
version = "0.18.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
proc-macro = true
doctest = true
test = false

[dependencies]
proc-macro2 = "1.0.10"
proc_macro_roids = "0.7.0"
quote = "1.0.3"
syn = { version = "1.0.17", features = ["extra-traits", "visit"] }

[dev-dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "wasm", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "test-support", "wav"] }
