[package]
name = "asset_gfx_gen"
version = "0.14.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/azriel91/amethyst.git", features = ["no-slow-safety-checks", "vulkan"], branch = "maintenance/update-dependencies" }
derivative = "1.0.3"
integer-sqrt = "0.1.2"

[features]
nightly = ["amethyst/nightly"]
