[package]
name = "asset_gfx_gen"
version = "0.17.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "vulkan"] }
derivative = "1.0.3"
integer-sqrt = "0.1.3"

[features]
nightly = ["amethyst/nightly"]
